--- a/UnivMedicalRecord/Pages/LaboratoryRecord/EditUrinalysis.cshtml
+++ b/UnivMedicalRecord/Pages/LaboratoryRecord/EditUrinalysis.cshtml
@@ -47,7 +47,9 @@
                        
   </style>
 <head>
-	
+	<link rel="stylesheet" href="./css/site.css">
+                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 
   <div class="site-wrapper m-md-5">
@@ -65,8 +67,16 @@
                     <label for="tab1"><span class="material-icons"></span>Urinalysis</label>
                     <div class="tab">
                         <div class="form-control">
+                        <div class="modal fade Urinalysis" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                                                                  <div class="modal-dialog modal-sm">
+                                                                      <div class="modal-content">
+                                                                          <img class="m-lg-4" src="@Model.UrinalysisPath" alt="Urinalysis" style="max-width: 10.25in; max-height: 5.25in;">
+                                                                      </div>
+                                                                  </div>
+                                                              </div>
                             <form class="form-inline" method="post">
                                 Input the Date of the Lab Test: <input asp-for="Urinalysis.DateRetrieved" type="date" id="LabDate">
+                                <button type="button" class="btn btn-dark m-lg-1" style="float: right" data-toggle="modal" data-target=".Urinalysis">Show Laboratory Test</button>
                                 <button class="btn btn-dark mb-4" style="float: right" asp-page-handler="Update" type="Submit">Submit</button>
                                 <input type="hidden" asp-for="Urinalysis.Id"/>
                                 <table class="table" style="text-align: center">
